Refactor asset imports and update UI components
Replaces asset imports to use a new bundled index file, removes unused asset files, and updates UI components to reflect these changes. Also adds a new PremiumImage component and updates project and certificate sections accordingly.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       content="Portfolio of Rafael Dutra - Machine Learning & Analytics Specialist"
     />
     <title>Rafael Dutra | Machine Learning & Analytics</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
